# LinuxAppDev_2021

02_TerminalProject/: Makefile  Show.c
03_Multifile/: Makefile  prog.c
03_TerminalProject/: Makefile  Show.c
04_Makefile/: Makefile  fun.c  prog.c
04_Text/: randomize.sh
05_Debugging/: Makefile  print_5.in  print_some.in  range.c
05_Environmental/: Makefile.am  configure.ac  pcr_windows.c
06_Debugging/: test.c
06_TracingFencing/: Makefile  move.c  prot.c  test_prot.sh  test_strace_inj.sh
07_DebuggingTracing/: Makefile  fakeabort.c  fakemain.c
07_Environmental/: Makefile.am  configure.ac  test.sh
07_Environmental/src/: rhasher.c
08_Regexps/: Makefile.am  configure.ac  esub.c
08_Regexps/src/: esub.c
08_TestingCoverage/: configure.ac
08_TestingCoverage/src/: Makefile.am
08_TestingCoverage/tests/: Makefile.am  bench.ts  moretests.ts  stests.ts
09_I18nL10n/: Makefile.am  binsearch.c  configure.ac  guess.po
09_I18nL10n/ru_RU.UTF-8/LC_MESSAGES/: guess.mo
09_Testing/: configure.ac
09_Testing/src/: Makefile.am  tests.h
09_Testing/tests/: bench.ts  init_tests.c  moretests.ts  stests.ts  tests.c
10_I18n/: Makefile.am
10_I18n/po/ru/: guess.po
11_Documenting/: Makefile.am  binsearch.c  configure.ac
11_Documenting/po/ru/: guess.po
11_Documenting/src/: Makefile.am  binsearch.c
12_PatchInstall/: Doxyfile.in  Makefile.am
12_PatchInstall/po/ru/: binsearch.po
12_PatchInstall/src/: Doc.md  Makefile.am  binsearch.c
